--- a/src/pug/pages/single-blog.pug
+++ b/src/pug/pages/single-blog.pug
@@ -16,8 +16,75 @@ block content
 		section.single-article
 			h1.h1 Шейкер + маркетплейс = 💜
 			.inner-page-banner
-				img(src="./img/article-bg.webp", alt="banner")
+				picture
+					source(srcset="./img/article-page/article-bg-mob.webp", media="(max-width: 767px)")
+					source(srcset="./img/article-page/article-bg.webp")
+					img(src="./img/article-page/article-bg.webp", alt="banner")
+			
+			.single-article__content
+				p Вы находитесь в поисках товара для продажи на маркетплейсах или своем магазине/фитнес-центре? Или вы хотите увеличить популярность своего бренда? Может быть хотите заказать шейкеры со своим логотипом к какой-то торжественной дате?
 				
+				p Тогда вы пришли по адресу! Мы запустили производство шейкеров в России в 2016 году, тестируя материалы, формы и отзывы покупателей, накопили огромный опыт и сейчас уже знаем чточно, что шейкеры обладают большим потенциалом роста на маркетплейсах и только набирают объемы продаж.
 
+				h2 Топ — 5 проблем при выборе товаров для продаж на площадках: 
+				ul
+					li какой товар выбрать?
+
+					li как найти прямого производителя и не переплачивать посредникам?
+
+					li как организовать маркировку товара и коробок? 
+
+					li какая модель более популярна и будет хорошо оборачиваться? 
+
+					li как не допустить провала в продажах и как часто нужно делать заказ продукции у поставщика?
+				
+				p Мы знаем ответы на эти вопросы и все расскажем вам. Чтобы не быть голословными мы запустили свою линейку шейкеров и тестируем какие цвета и модели шейкеров лучше продаются и как принт влияет на внимание аудитории.
+
+				img(src="./img/article-page/logos.webp", width="660" alt="img")
+				
+				p Подскажем какие позиции лучше выбрать для первого заказа, поможем с маркировкой, упакуем в коробки правильного размера и отправим любой транспортной компанией на ваш выбор (или посоветуем какую лучше выбрать) 
+
+				p Есть вопросы — напишите нам в любом мессенджере или на почту. Хотите самостоятельно выбрать модель и цвета шейкера — воспользуйтесь нашим онлайн-конструктором. 
+
+				p Ваша команда Shaker Bottle.  
+				
+				//========SLIDER ============
+				.article-slider.swiper
+					.swiper-wrapper
+						.swiper-slide
+							img(src="./img/article-page/article-img.webp", width="660" alt="img")
+						.swiper-slide
+							img(src="./img/article-page/article-img.webp", width="660" alt="img")
+						.swiper-slide
+							img(src="./img/article-page/article-img.webp", width="660" alt="img")
+					
+					.swiper-navigation-left
+						.swiper-button-next
+							svg
+								use(href="./img/spriteSvg.svg#caret-right")
+						.swiper-button-prev
+							svg
+								use(href="./img/spriteSvg.svg#caret-left")
+						.swiper-pagination
+
+				p Подскажем какие позиции лучше выбрать для первого заказа, поможем с маркировкой, упакуем в коробки правильного размера и отправим любой транспортной компанией на ваш выбор (или посоветуем какую лучше выбрать) 
+				hr
+				p #[big Вы не найдете в конструкторе эту модель, она из ограниченной серии, поэтому свяжитесь с нашими менеджерами, они с удовольствием вам помогут подобрать другие сочетания цветов и подготовят макеты с логотипом.]
+				hr
+				p Тогда вы пришли по адресу! Мы запустили производство шейкеров в России в 2016 году, тестируя материалы, #[mark формы и отзывы покупателей, накопили огромный] опыт и сейчас уже знаем чточно, что шейкеры обладают большим потенциалом роста на маркетплейсах и только набирают объемы продаж.
+
+				p Тогда вы пришли по адресу! Мы запустили производство шейкеров в России в 2016 году, тестируя материалы, формы и отзывы покупателей, накопили огромный опыт и сейчас уже знаем чточно, что шейкеры обладают большим потенциалом роста на маркетплейсах и только набирают объемы продаж.
+
+				.accent-text
+					p Каждый месяц мы выбираем один цвет стакана с любой крышкой и клапаном и делаем на него скидку. Акция распространяется на модели С01 и С02. Больше никаких условий, просто выберите крышку и клапан и получите свой уникальный шейкер со скидкой!
+
+				.video
+					iframe(width="100%", height="100%", src="https://www.youtube.com/embed/9YpM5vwYMyU?si=iCuuVvf5FQhhRJll", title="YouTube video player", frameborder="0", allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share", referrerpolicy="strict-origin-when-cross-origin", allowfullscreen)
+
+				p #[big Описание про печать готовится, видео монтируется. Уже можно посмотреть видео про все производство, #[mark про печать там тоже есть:]]
+
+				.article-preview-block
+					p Описание про печать готовится, видео монтируется. 
+					img(src="./img/article-page/article-poster2.webp", width="660" alt="img")
 block variables
 	-var title = "Shaker";
