--- a/src/pug/pages/single-blog.pug
+++ b/src/pug/pages/single-blog.pug
@@ -26,7 +26,7 @@ block content
 				
 				p Тогда вы пришли по адресу! Мы запустили производство шейкеров в России в 2016 году, тестируя материалы, формы и отзывы покупателей, накопили огромный опыт и сейчас уже знаем чточно, что шейкеры обладают большим потенциалом роста на маркетплейсах и только набирают объемы продаж.
 
-				h2 Топ — 5 проблем при выборе товаров для продаж на площадках: 
+				h2 Топ — 5 проблем при выборе<br> товаров для продаж на площадках: 
 				ul
 					li какой товар выбрать?
 
@@ -40,7 +40,8 @@ block content
 				
 				p Мы знаем ответы на эти вопросы и все расскажем вам. Чтобы не быть голословными мы запустили свою линейку шейкеров и тестируем какие цвета и модели шейкеров лучше продаются и как принт влияет на внимание аудитории.
 
-				img(src="./img/article-page/logos.webp", width="660" alt="img")
+				p
+					img(src="./img/article-page/logos.webp", width="660" alt="img")
 				
 				p Подскажем какие позиции лучше выбрать для первого заказа, поможем с маркировкой, упакуем в коробки правильного размера и отправим любой транспортной компанией на ваш выбор (или посоветуем какую лучше выбрать) 
 
