--- a/src/scss/pages/_single-blog.scss
+++ b/src/scss/pages/_single-blog.scss
@@ -26,8 +26,8 @@
 	height: 100%;
 }
 .single-article__content{
-	max-width: 660px;
-	margin: 0 auto;
+	max-width: 760px;
+	padding-left: 100px;
 	padding-block: 45px;
 	&>* + *{
 		margin-bottom: 45px;
@@ -44,6 +44,15 @@
 	.swiper{
 		padding-bottom: 35px;
 		.swiper-pagination{bottom: 0; font-weight: 700;}
+		.swiper-slide{
+			width: 100%;
+			max-height: 370px;
+			overflow: hidden;
+			img{
+				width: 100%;
+				min-height: 370px;
+			}
+		}
 	}
 	.article-preview-block{
 		position: relative;
@@ -58,5 +67,25 @@
 			max-width: 300px;
 			color: white;
 		}
+	}
+	p>img{
+		max-height: 280px;
+		overflow: hidden;
+		
+	}
+	ol li+li{margin-top: 15px;}
+	ul{
+		margin-bottom: 45px;
+		padding-left:10px;
+		
+		li::marker{
+			content:'\2013';
+			
+		}
+		li{ padding-left: 5px;}
+		li +li{margin-top: 15px;}
+	}
+	@media (max-width: 1199px) {
+	padding-left: 0;
 	}
 }
