--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -84,7 +84,10 @@ html(lang="ru")
 					a(href="#!").icon-tg
 						img(src="./img/social/tg.svg", alt="tg")
 		
-		
+		a(href="#top").back-top.d-flex-center
+			svg.caret-right
+				use( href='./img/spriteSvg.svg#caret-right')
+			
 		//=============== slider swiper ===================
 		script(src="./libs/swiper/swiper-bundle.min.js")
 		//=============== jquery ===================
