--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -2,7 +2,7 @@ extends ../layouts/layout.pug
 
 block content
 	include ../sections/_header.pug
-	main.inner-page.mb-40
+	main.inner-page
 		//======= breadcrumbs =======
 		.breadcrumbs
 			ul
