--- a/src/pug/pages/single-blog.pug
+++ b/src/pug/pages/single-blog.pug
@@ -1,5 +1,19 @@
 extends ../layouts/layout.pug
-
+mixin blog-card(img, title, txt)
+	//=========== single card ============
+	.blog-card.img-zoom
+		.blog-card__img
+			img(src="./img/blog/"+ img +".webp", alt="img")
+		
+		.blog-card__body
+			a(href="single-blog.html").title-25 !{title}
+			p !{txt}
+			.blog-card__footer
+				a(href="single-blog.html").btn-arrow
+					span  Читать
+					svg.arrow-right
+						use( href='./img/spriteSvg.svg#arrow')
+				span 02 08 2022
 block content
 	include ../sections/_header.pug
 	main.inner-page
@@ -21,6 +35,7 @@ block content
 					source(srcset="./img/article-page/article-bg.webp")
 					img(src="./img/article-page/article-bg.webp", alt="banner")
 			
+			//============= ARTICLE CONTENT ============
 			.single-article__content
 				p Вы находитесь в поисках товара для продажи на маркетплейсах или своем магазине/фитнес-центре? Или вы хотите увеличить популярность своего бренда? Может быть хотите заказать шейкеры со своим логотипом к какой-то торжественной дате?
 				
@@ -87,5 +102,20 @@ block content
 				.article-preview-block
 					p Описание про печать готовится, видео монтируется. 
 					img(src="./img/article-page/article-poster2.webp", width="660" alt="img")
+
+		//============= BLOG CARDS ============
+		.blog-articles--four
+			.blog-articles
+				+blog-card(1, 'Ищете подходящий товар для продаж на wildberries?','Мы уверены что шейкеры вам подойдут')
+				
+				+blog-card(3, 'Работаем в штатом режиме.','Что успели сделать чтобы стабилизировать ситуацию')
+
+				+blog-card(4, '100% оранжевый','Ограниченная серия')
+				
+				+blog-card(2, 'Цвет месяца — PINK','Апрель в розовом цвете. Скидка внутри →')
+
+
+	include ../sections/_contacts.pug
+	include ../sections/_footer.pug
 block variables
 	-var title = "Shaker";
