--- a/src/scss/blocks/_menu-toggle.scss
+++ b/src/scss/blocks/_menu-toggle.scss
@@ -4,8 +4,8 @@
 	cursor: pointer;
 	justify-content: center;
 	align-items: center;
-	width: remy(30);
-	height: remy(30);
+	width: 30px;
+	height: 30px;
 	
 	flex-shrink: 0;
 }
@@ -14,9 +14,9 @@
 
 .menu-toggle span {
 	position: relative;
-	height: remy(2);
+	height: 2px;
 	width: 100%;
-	border-radius: remy(3);
+	border-radius: 3px;
 	background-color: var(--lightText);
 	-webkit-transition: .2s;
 	-o-transition: .2s;
