--- a/src/scss/blocks/_mobile-menu.scss
+++ b/src/scss/blocks/_mobile-menu.scss
@@ -1,38 +1,38 @@
 .header-menu{
-	column-gap:remy(70);
+	column-gap:70px;
 	flex-shrink: 0;
 
 	a{
-		padding: remy(3);
+		padding: 3px;
 		color: white;
 		transition: .3s;
 		&:hover{
 			opacity: .7;
 		}
 	}
-	@media (max-width: remy(1439)) {
+	@media (max-width: 1439px) {
 		column-gap: 2.5rem;
 	}
-	@media (max-width: remy(1199)) {
+	@media (max-width: 1199px) {
 		column-gap: 1.5rem;
 	}
-	@media (max-width: remy(991)) {
-		width: remy(320);
+	@media (max-width: 991px) {
+		width: 320px;
 		height: 100%;
 		margin-left: auto;
 		transform: translateX(110%);
 		flex-direction: column;
 		padding-block: 40px;
-		row-gap: remy(12);
+		row-gap: 12px;
 		background-color: var(--ac);
 		transition: .3s;
-		a{font-size: remy(20);}
+		a{font-size: 20px;}
 
 		
 	}
 }
 #header-menu{
-	@media (max-width: remy(991)) {
+	@media (max-width: 991px) {
 		display: none;
 		opacity: 0;
 		position: fixed;
