--- a/src/scss/sections/_header-banner.scss
+++ b/src/scss/sections/_header-banner.scss
@@ -28,7 +28,7 @@
 .shaker-models-wrapper{
 	padding-block: 20px;
 	background-color: #fff;
-	border-radius: remy(10);
+	border-radius: 10px;
 	.txt-bold{
 		font-size: 15px;
 		font-family: var(--fontBold);
@@ -63,8 +63,8 @@
 	}
 	
 	&-item{
-		padding: remy(10);
-		border-radius: remy(10);
+		padding: 10px;
+		border-radius: 10px;
 		border: 1px solid #000000;
 		width: 100%;
 		max-width: 500px;
