fix-product-header

--- a/src/pug/sections/_header-banner.pug
+++ b/src/pug/sections/_header-banner.pug
@@ -11,25 +11,25 @@
 				p.txt-bold Наши модели
 				.shaker-models__type
 					//====== single item =======
-					.shaker-models__type-item
+					a(href="product-page.html").shaker-models__type-item
 						.shaker-model__name
 							span Шейкер
 							span С01
 						.shaker-model__vol 600 мл
 					//====== single item =======
-					.shaker-models__type-item
+					a(href="product-page.html").shaker-models__type-item
 						.shaker-model__name
 							span Шейкер
 							span С02
 						.shaker-model__vol 400 мл
 					//====== single item =======
-					.shaker-models__type-item
+					a(href="product-page.html").shaker-models__type-item
 						.shaker-model__name
 							span Шейкер
 							span С03
 						.shaker-model__vol 600 мл
 					//====== single item =======
-					.shaker-models__type-item
+					a(href="product-page.html").shaker-models__type-item
 						.shaker-model__name
 							span Шейкер
 							span С04
