--- a/src/pug/pages/product-page.pug
+++ b/src/pug/pages/product-page.pug
@@ -2,13 +2,50 @@ extends ../layouts/layout.pug
 
 block content
 	include ../sections/_header.pug
-	main.page-main
-		include ../sections/_header-banner.pug
+	main.inner-page
+		//======= breadcrumbs =======
+		.breadcrumbs
+			ul
+				li
+					a(href="index.html") Главная
+				li
+					a(href="#!") Шейкер С01
+		
+		section.product-page
+			h1.h1 Шейкер С01
+			
+			//======= header banner ======
+			.product-page-header.white-bg
+				//===== video box ========
+				.video-preview-item
+					//===== play btm =====
+					button.play-icon
+						svg.svg-play
+							use(href="./img/spriteSvg.svg#svg-play")
+					.video-poster
+						img(src="./img/product-page/product-poster.webp", alt="poster")
+					//====video =======
+					video(width="100%", height="100%" )
+						source(src="video/video.mp4" type="video/mp4" )
+				
+				//==== price-box =====
+				.product-page-header__info
+					.product-price.accent-bg.d-flex
+						p.price-box от 146 ₽
+						p.price-box-text Окончательная цена зависит от размера заказа и логотипа. Уточните у менеджера.
+					.product-info-list
+						ul
+							li Только опт.<br>Минимальная партия от 84 шт.
+							li Всегда в наличии
+					a(href="#contacts").btn Заказать
 		
 		include ../sections/_constructor-inner-page.pug
 		
-		
 		include ../sections/_review.pug
+		include ../sections/_portfolio.pug
+		include ../sections/_blog-cards.pug
+	include ../sections/_contacts.pug
+	include ../sections/_footer.pug
 	
 block variables
 	-var title = "Shaker";
