--- a/src/scss/sections/_consructor-inner.scss
+++ b/src/scss/sections/_consructor-inner.scss
@@ -246,6 +246,7 @@
 		flex-direction:column ;
 		&>*{width: 100%;}
 	}
+	.current-model-name{display: none;}
 	@media (max-width: 1023px) {
 		display: none;
 	}
