--- a/src/pug/pages/product-page.pug
+++ b/src/pug/pages/product-page.pug
@@ -12,6 +12,13 @@ block content
 					a(href="#!") Шейкер С01
 		
 		section.product-page
+			//========= visible in mobile =====
+			button.open-constructor
+				span Собрать свой уникальный дизайн шейкера
+				svg.svg-plus
+					use( href='./img/spriteSvg.svg#svg-plus')
+				
+			//======== header =======
 			h1.h1 Шейкер С01
 			
 			//======= header banner ======
