--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -88,3 +88,22 @@
 	 margin-bottom: 15px;
 	}
 }
+.open-constructor{
+	display: none;
+	align-items: center;
+	padding: 10px;
+	border-radius: 10px;
+	background-color: var(--accentBlue);
+	color: white;
+	gap:5px;
+	max-width: 300px;
+	text-align: left;
+	margin-bottom: 25px;
+	span{
+		flex-grow: 1;
+		font-size: 16px;
+	}
+	@media (max-width: 1023px) {
+		display: flex;
+	}
+}
