--- a/src/pug/pages/product-page.pug
+++ b/src/pug/pages/product-page.pug
@@ -46,6 +46,7 @@ block content
 							li Всегда в наличии
 					a(href="#contacts").btn Заказать
 		
+		include ../sections/_product-parts-sliders.pug
 		include ../sections/_constructor-inner-page.pug
 		
 		include ../sections/_review.pug
