--- a/src/pug/pages/product-page.pug
+++ b/src/pug/pages/product-page.pug
@@ -47,6 +47,7 @@ block content
 					a(href="#contacts").btn Заказать
 		
 		include ../sections/_product-parts-sliders.pug
+		include ../sections/_print.pug
 		include ../sections/_constructor-inner-page.pug
 		
 		include ../sections/_review.pug
