--- a/src/pug/sections/_constructor-inner-page.pug
+++ b/src/pug/sections/_constructor-inner-page.pug
@@ -54,9 +54,9 @@ section.constructor.constructor-minimize.white-bg.mt-30
 			.constructor-column-center
 				//========= Images Block ========
 				.constructor-images
-					img.model-base(src="./img/c01/c01_base.webp", width="270" alt="c01")
-					img.model-body(src="./img/c01/c01_body.webp", width="270" alt="c01")
-					img.model-cap(src="./img/c01/c01_cap_yellow.webp", width="270" alt="c01")
+					img.model-base(src="./img/c01/C01_base.webp", width="270" alt="c01")
+					img.model-body(src="./img/c01/C01_body.webp", width="270" alt="c01")
+					img.model-cap(src="./img/c01/C01_cap_yellow.webp", width="270" alt="c01")
 					img.model-snap(src="./img/c01/c01_snap.webp", width="270" alt="c01")
 				
 				//======= current model name (visible in mob version) =====
