--- a/src/pug/sections/_steps.pug
+++ b/src/pug/sections/_steps.pug
@@ -55,7 +55,7 @@ section.constructor.white-bg.mt-30
 							.constructor-form__display.d-flex-x
 								p.current-model-name С01 <br>600 мл
 								.constructor-images
-									img.model-base(src="./img/c01/c01_base.webp", width="270" alt="c01")
+									img.model-base(src="./img/c01/C01_base.webp", width="270" alt="c01")
 									img.model-body(src="./img/c01/c01_body.webp", width="270" alt="c01")
 									img.model-cap(src="./img/c01/c01_cap_yellow.webp", width="270" alt="c01")
 									img.model-snap(src="./img/c01/c01_snap.webp", width="270" alt="c01")
