--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -64,3 +64,10 @@
 		transform: rotate(-90deg);
 	}
 }
+.btn.btn--outline{
+	background-color: transparent;
+	&:hover{
+		opacity: .5;
+		color: #000000;
+	}
+}
