--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -4,6 +4,7 @@
 	color: var(--lightText);
 	.logo{
 		padding-right: 0;
+		color:var(--lightText);
 		span:has(sup){
 			font-size: 17px;
 			line-height: 0.2;
