--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -59,7 +59,7 @@ html(lang="ru")
 				a(href="#!").icon-vk
 					img(src="./img/social/vk.svg", alt="vk")
 				a(href="#!").icon-inst
-					img(src="./img/social/inst.svg", alt="inst")
+					img(src="./img/social/ins.svg", alt="inst")
 				a(href="#!").icon-tel
 					img(src="./img/social/app.svg", alt="app")
 				a(href="#!").icon-viber
@@ -76,7 +76,7 @@ html(lang="ru")
 					a(href="#!").icon-vk
 						img(src="./img/social/vk.svg", alt="vk")
 					a(href="#!").icon-inst
-						img(src="./img/social/inst.svg", alt="inst")
+						img(src="./img/social/ins.svg", alt="inst")
 					a(href="#!").icon-tel
 						img(src="./img/social/app.svg", alt="app")
 					a(href="#!").icon-viber
