--- a/src/pug/sections/_contacts-inner.pug
+++ b/src/pug/sections/_contacts-inner.pug
@@ -21,7 +21,7 @@ section.contacts#contacts
 							a(href="#!").icon-vk
 								img(src="./img/social/vk.svg", alt="vk")
 							a(href="#!").icon-inst
-								img(src="./img/social/inst.svg", alt="inst")
+								img(src="./img/social/ins.svg", alt="inst")
 							a(href="#!").icon-tel
 								img(src="./img/social/app.svg", alt="app")
 							a(href="#!").icon-viber
@@ -47,7 +47,7 @@ section.contacts#contacts
 							a(href="#!").icon-vk
 								img(src="./img/social/vk.svg", alt="vk")
 							a(href="#!").icon-inst
-								img(src="./img/social/inst.svg", alt="inst")
+								img(src="./img/social/ins.svg", alt="inst")
 							a(href="#!").icon-tel
 								img(src="./img/social/app.svg", alt="app")
 							a(href="#!").icon-viber
