--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -4,7 +4,7 @@ header.header#top
 		.header-content.d-flex
 			
 			//====== logo =========
-			a(href="index.html").logo.logo
+			a(href="index.html").logo
 				span Shaker Bottle #[sup TM]
 				//- img(src="./img/logo.svg", width="205" height="22" alt="logo")
 				span Производитель  шейкеров
@@ -71,7 +71,7 @@ header.header#top
 						a(href="#!").icon-vk
 							img(src="./img/social/vk.svg", alt="vk")
 						a(href="#!").icon-inst
-							img(src="./img/social/inst.svg", alt="inst")
+							img(src="./img/social/ins.svg", alt="inst")
 						a(href="#!").icon-tel
 							img(src="./img/social/app.svg", alt="app")
 						a(href="#!").icon-viber
