--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -56,7 +56,9 @@
 		}
 	}
 		
-		
+	@media (max-width: 767px) {
+	.container{padding-inline: 24px;}
+	}	
 	
 }
 .logo{
@@ -66,6 +68,7 @@
 		line-height: 0.8;
 		font-family: var(--fontBold);
 		font-weight: bold;
+		display: block;
 	}
 	sup{
 		font-size: 10px;
