--- a/src/pug/sections/_product-parts-sliders.pug
+++ b/src/pug/sections/_product-parts-sliders.pug
@@ -1,5 +1,5 @@
 //========  PRODUCT SLIDERS ===========
-section.product-parts.white-bg
+section.product-parts.white-bg.mt-10
 
 	.product-parts-sliders
 		//======= SINGLE CARD =======
