--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -63,6 +63,10 @@
 	svg{
 		transform: rotate(-90deg);
 	}
+	@media (max-width: 1023px) {
+		bottom: 60px;
+		right: 15px;
+	}
 }
 .btn.btn--outline{
 	background-color: transparent;
