--- a/src/pug/sections/_print.pug
+++ b/src/pug/sections/_print.pug
@@ -1,6 +1,10 @@
-section.print
+section.print.mt-10.d-flex
 	.print__bg
-		img(src="./img/product-page/product-print.webp" alt="img" width="1200")
+		picture
+			source(srcset="./img/product-page/print-bg-mobile.webp", media="(max-width: 767px)")
+			source(srcset="./img/product-page/print-bg.webp")
+			img(src="./img/product-page/print-bg.webp" alt="img" width="1200")
+		
 	.print__text.accent-bg
 		h3.title-25 Печать
 		p Мы используем УФ печать, краска запекается в специальной сушке под УФ лампами. Такой логотип не сотрется от небольших механических повреждения, шейкер можно безбоязненно мыть в посудомоечной машине. 
