--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -227,8 +227,14 @@ select:-webkit-autofill:focus {
 .mb-15 {
   margin-bottom: 20px;
 }
+.mb-10 {
+  margin-bottom: 10px;
+}
+.mt-10 {
+  margin-top: 10px;
+}
 .mt-15 {
-  margin-top: 20px;
+  margin-top: 15px;
 }
 .mt-20 {
   margin-top: 20px;
