--- a/src/pug/sections/_contacts-inner.pug
+++ b/src/pug/sections/_contacts-inner.pug
@@ -8,7 +8,7 @@ section.contacts#contacts
 				//========= MANAGER CARD =================
 				.manager-card.d-flex
 					.manager-card__img
-						img(src="./img/manager1.webp", width="150" alt="img")
+						img.lazy(src="./img/manager1.webp", width="150" alt="img")
 					.manager-card__info
 						p.title-25.mb-15 Анастасия
 						
@@ -34,7 +34,7 @@ section.contacts#contacts
 				//========= MANAGER CARD =================
 				.manager-card.d-flex
 					.manager-card__img
-						img(src="./img/manager2.webp", width="150" alt="img")
+						img.lazy(src="./img/manager2.webp", width="150" alt="img")
 					.manager-card__info
 						p.title-25.mb-15 Ольга
 						
