--- a/src/pug/sections/_header-banner.pug
+++ b/src/pug/sections/_header-banner.pug
@@ -54,7 +54,7 @@
 						picture
 							source(srcset="./img/header-slider/s1-mobile.webp", media="(max-width: 767px)")
 							source(srcset="./img/header-slider/s1-desktop.webp")
-							img(srcset="./img/header-slider/s1-desktop.webp", alt="img")
+							img.lazy(srcset="./img/header-slider/s1-desktop.webp", alt="img")
 
 				//======= single slide ========
 				.swiper-slide.header-slider-item
@@ -69,7 +69,7 @@
 						picture
 							source(srcset="./img/header-slider/s2-mobile.webp", media="(max-width: 767px)")
 							source(srcset="./img/header-slider/s2-desktop.webp")
-							img(srcset="./img/header-slider/s1-desktop.webp", alt="img")
+							img.lazy(srcset="./img/header-slider/s1-desktop.webp", alt="img")
 
 				//======= single slide ========
 				.swiper-slide.header-slider-item
@@ -84,7 +84,7 @@
 						picture
 							source(srcset="./img/header-slider/s3-mobile.webp", media="(max-width: 767px)")
 							source(srcset="./img/header-slider/s3-desktop.webp")
-							img(srcset="./img/header-slider/s3-desktop.webp", alt="img")
+							img.lazy(srcset="./img/header-slider/s3-desktop.webp", alt="img")
 
 			.swiper-button-next
 				svg
