--- a/src/pug/sections/_product-parts-sliders.pug
+++ b/src/pug/sections/_product-parts-sliders.pug
@@ -8,11 +8,11 @@ section.product-parts.white-bg.mt-10
 			.swiper.product-part-1
 				.swiper-wrapper
 					.swiper-slide
-						img(src="./img/product-page/1.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/1.webp" width="386", alt="img")
 					.swiper-slide
-						img(src="./img/product-page/1.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/1.webp" width="386", alt="img")
 					.swiper-slide
-						img(src="./img/product-page/1.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/1.webp" width="386", alt="img")
 				
 				//====slider-navigation ======
 				.swiper-button-next
@@ -34,11 +34,11 @@ section.product-parts.white-bg.mt-10
 			.swiper.product-part-2
 				.swiper-wrapper
 					.swiper-slide
-						img(src="./img/product-page/2.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/2.webp" width="386", alt="img")
 					.swiper-slide
-						img(src="./img/product-page/2.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/2.webp" width="386", alt="img")
 					.swiper-slide
-						img(src="./img/product-page/2.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/2.webp" width="386", alt="img")
 				
 				//====slider-navigation ======
 				.swiper-button-next
@@ -60,11 +60,11 @@ section.product-parts.white-bg.mt-10
 			.swiper.product-part-3
 				.swiper-wrapper
 					.swiper-slide
-						img(src="./img/product-page/3.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/3.webp" width="386", alt="img")
 					.swiper-slide
-						img(src="./img/product-page/3.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/3.webp" width="386", alt="img")
 					.swiper-slide
-						img(src="./img/product-page/3.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/3.webp" width="386", alt="img")
 				
 				//====slider-navigation ======
 				.swiper-button-next
@@ -85,11 +85,11 @@ section.product-parts.white-bg.mt-10
 			.swiper.product-part-4
 				.swiper-wrapper
 					.swiper-slide
-						img(src="./img/product-page/4.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/4.webp" width="386", alt="img")
 					.swiper-slide
-						img(src="./img/product-page/4.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/4.webp" width="386", alt="img")
 					.swiper-slide
-						img(src="./img/product-page/4.webp" width="386", alt="img")
+						img.lazy(src="./img/product-page/4.webp" width="386", alt="img")
 				
 				//====slider-navigation ======
 				.swiper-button-next
