--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,4 +30,5 @@
 @import "pages/contacts";
 @import "pages/product-page";
 @import "sections/product-parts-sliders";
+@import "sections/benefits";
 @import "sections/print";
