--- a/src/pug/pages/single-blog.pug
+++ b/src/pug/pages/single-blog.pug
@@ -3,7 +3,7 @@ mixin blog-card(img, title, txt)
 	//=========== single card ============
 	.blog-card.img-zoom
 		.blog-card__img
-			img(src="./img/blog/"+ img +".webp", alt="img")
+			img.lazy(src="./img/blog/"+ img +".webp", alt="img")
 		
 		.blog-card__body
 			a(href="single-blog.html").title-25 !{title}
@@ -33,7 +33,7 @@ block content
 				picture
 					source(srcset="./img/article-page/article-bg-mob.webp", media="(max-width: 767px)")
 					source(srcset="./img/article-page/article-bg.webp")
-					img(src="./img/article-page/article-bg.webp", alt="banner")
+					img.lazy(src="./img/article-page/article-bg.webp", alt="banner")
 			
 			//============= ARTICLE CONTENT ============
 			.single-article__content
@@ -56,7 +56,7 @@ block content
 				p Мы знаем ответы на эти вопросы и все расскажем вам. Чтобы не быть голословными мы запустили свою линейку шейкеров и тестируем какие цвета и модели шейкеров лучше продаются и как принт влияет на внимание аудитории.
 
 				p
-					img(src="./img/article-page/logos.webp", width="660" alt="img")
+					img.lazy(src="./img/article-page/logos.webp", width="660" alt="img")
 				
 				p Подскажем какие позиции лучше выбрать для первого заказа, поможем с маркировкой, упакуем в коробки правильного размера и отправим любой транспортной компанией на ваш выбор (или посоветуем какую лучше выбрать) 
 
@@ -68,11 +68,11 @@ block content
 				.article-slider.swiper
 					.swiper-wrapper
 						.swiper-slide
-							img(src="./img/article-page/article-img.webp", width="660" alt="img")
+							img.lazy(src="./img/article-page/article-img.webp", width="660" alt="img")
 						.swiper-slide
-							img(src="./img/article-page/article-img.webp", width="660" alt="img")
+							img.lazy(src="./img/article-page/article-img.webp", width="660" alt="img")
 						.swiper-slide
-							img(src="./img/article-page/article-img.webp", width="660" alt="img")
+							img.lazy(src="./img/article-page/article-img.webp", width="660" alt="img")
 					
 					.swiper-navigation-left
 						.swiper-button-next
@@ -102,7 +102,7 @@ block content
 
 				.article-preview-block
 					p Описание про печать готовится, видео монтируется. 
-					img(src="./img/article-page/article-poster2.webp", width="660" alt="img")
+					img.lazy(src="./img/article-page/article-poster2.webp", width="660" alt="img")
 
 		//============= BLOG CARDS ============
 		.blog-articles--four
