--- a/src/pug/sections/_constructor-inner-page.pug
+++ b/src/pug/sections/_constructor-inner-page.pug
@@ -8,7 +8,7 @@ mixin model-card(title, imgSrc, imgW, chkd)
 		.model-card
 			span.item-info i
 			.model-card__img
-				img(src="./img/models/c0"+imgSrc+".webp", width=""+imgW  alt="img")
+				img.lazy(src="./img/models/c0"+imgSrc+".webp", width=""+imgW  alt="img")
 			p.title-15 Модель С0#{imgSrc} —&nbsp;#{title}00 мл
 
 mixin model-card-mini(title, imgSrc, imgW, chkd)
@@ -21,7 +21,7 @@ mixin model-card-mini(title, imgSrc, imgW, chkd)
 		.model-card.model-card--mini
 			span.item-info i
 			.model-card__img
-				img(src="./img/models/c0"+imgSrc+".webp", width=""+imgW  alt="img")
+				img.lazy(src="./img/models/c0"+imgSrc+".webp", width=""+imgW  alt="img")
 			p.title-15 С0#{imgSrc} —&nbsp;#{title}00 мл
 mixin model-color(bgColor, svgColor, chkd)
 	//======== один элемент =========
@@ -54,10 +54,10 @@ section.constructor.constructor-minimize.white-bg.mt-10
 			.constructor-column-center
 				//========= Images Block ========
 				.constructor-images
-					img.model-base(src="./img/c01/C01_base.webp", width="270" alt="c01")
-					img.model-body(src="./img/c01/C01_body.webp", width="270" alt="c01")
-					img.model-cap(src="./img/c01/C01_cap_yellow.webp", width="270" alt="c01")
-					img.model-snap(src="./img/c01/c01_snap.webp", width="270" alt="c01")
+					img.model-base.lazy(src="./img/c01/C01_base.webp", width="270" alt="c01")
+					img.model-body.lazy(src="./img/c01/C01_body.webp", width="270" alt="c01")
+					img.model-cap.lazy(src="./img/c01/C01_cap_yellow.webp", width="270" alt="c01")
+					img.model-snap.lazy(src="./img/c01/c01_snap.webp", width="270" alt="c01")
 				
 				//======= current model name (visible in mob version) =====
 				p.current-model-name С01 <br>600 мл
