--- a/src/pug/sections/_contacts.pug
+++ b/src/pug/sections/_contacts.pug
@@ -6,7 +6,7 @@ section.contacts#contacts
 				h2.title-25.mb-40 Ответим на ваши вопросы
 				.manager-card.d-flex
 					.manager-card__img
-						img(src="./img/manager1.webp", width="150" alt="img")
+						img.lazy(src="./img/manager1.webp", width="150" alt="img")
 					.manager-card__info
 						p.title-25.mb-15 Анастасия
 						
