--- a/src/pug/sections/_print.pug
+++ b/src/pug/sections/_print.pug
@@ -1,9 +1,10 @@
+//=================== PRINT ==================
 section.print.mt-10.d-flex
 	.print__bg
 		picture
 			source(srcset="./img/product-page/print-bg-mobile.webp", media="(max-width: 767px)")
 			source(srcset="./img/product-page/print-bg.webp")
-			img(src="./img/product-page/print-bg.webp" alt="img" width="1200")
+			img.lazy(src="./img/product-page/print-bg.webp" alt="img" width="1200")
 		
 	.print__text.accent-bg
 		h3.title-25 Печать
