--- a/src/pug/sections/_video-preview.pug
+++ b/src/pug/sections/_video-preview.pug
@@ -9,7 +9,7 @@ section.video-preview.mt-30
 				svg.svg-play
 					use(href="./img/spriteSvg.svg#svg-play")
 			.video-poster
-				img(src="./img/video-posters/poster1.webp", alt="poster")
+				img.lazy(src="./img/video-posters/poster1.webp", alt="poster")
 			//====video =======
 			video(width="100%", height="100%" )
 				source(src="video/video.mp4" type="video/mp4" )
@@ -21,7 +21,7 @@ section.video-preview.mt-30
 				svg.svg-play
 					use(href="./img/spriteSvg.svg#svg-play")
 			.video-poster
-				img(src="./img/video-posters/poster2.webp", alt="poster")
+				img.lazy(src="./img/video-posters/poster2.webp", alt="poster")
 			//====video =======
 			video(src="video/video.mp4", width="100%", height="100%", )
 				source(src="video.mp4" type="video/mp4")
