--- a/src/pug/sections/_constructor-inner-page.pug
+++ b/src/pug/sections/_constructor-inner-page.pug
@@ -54,10 +54,10 @@ section.constructor.constructor-minimize.white-bg.mt-10
 			.constructor-column-center
 				//========= Images Block ========
 				.constructor-images
-					img.model-base.lazy(src="./img/c01/C01_base.webp", width="270" alt="c01")
-					img.model-body.lazy(src="./img/c01/C01_body.webp", width="270" alt="c01")
-					img.model-cap.lazy(src="./img/c01/C01_cap_yellow.webp", width="270" alt="c01")
-					img.model-snap.lazy(src="./img/c01/c01_snap.webp", width="270" alt="c01")
+					img.model-base.lazy(src="./img/c01/base.webp", width="270" alt="c01")
+					img.model-body.lazy(src="./img/c01/body.webp", width="270" alt="c01")
+					img.model-cap.lazy(src="./img/c01/cap_yellow.webp", width="270" alt="c01")
+					img.model-snap.lazy(src="./img/c01/snap.webp", width="270" alt="c01")
 				
 				//======= current model name (visible in mob version) =====
 				p.current-model-name С01 <br>600 мл
