--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -70,7 +70,7 @@ html(lang="ru")
 		block content
 			//=======  right fixed social =========
 			.social-block-fixed
-				.social-bloc
+				.social-block
 					a(href="#!").icon-email
 						img(src="./img/social/email.svg", alt="email")
 					a(href="#!").icon-vk
