--- a/src/pug/sections/_contacts.pug
+++ b/src/pug/sections/_contacts.pug
@@ -48,7 +48,7 @@ section.contacts#contacts
 							span.icon-download
 						span
 					.form-item
-						textarea(type="text" name="message" placeholder="Ваш комментарий...")
+						textarea( name="message" placeholder="Ваш комментарий...")
 					.form-notice.d-flex
 						span.notice-icon
 						p ВНИМАНИЕ! Продаем только оптом, мин. партия: 84 штуки.
