--- a/src/pug/sections/_header-banner.pug
+++ b/src/pug/sections/_header-banner.pug
@@ -53,8 +53,8 @@
 					.header-slider__image
 						picture
 							source(srcset="./img/header-slider/s1-mobile.webp", media="(max-width: 767px)")
-							source(srcset="./img/header-slider/s1-desktop.webp")
-							img.lazy(srcset="./img/header-slider/s1-desktop.webp", alt="img")
+							
+							img.lazy(src="./img/header-slider/s1-desktop.webp", alt="img")
 
 				//======= single slide ========
 				.swiper-slide.header-slider-item
@@ -68,8 +68,8 @@
 					.header-slider__image
 						picture
 							source(srcset="./img/header-slider/s2-mobile.webp", media="(max-width: 767px)")
-							source(srcset="./img/header-slider/s2-desktop.webp")
-							img.lazy(srcset="./img/header-slider/s1-desktop.webp", alt="img")
+							
+							img.lazy(src="./img/header-slider/s1-desktop.webp", alt="img")
 
 				//======= single slide ========
 				.swiper-slide.header-slider-item
@@ -83,8 +83,8 @@
 					.header-slider__image
 						picture
 							source(srcset="./img/header-slider/s3-mobile.webp", media="(max-width: 767px)")
-							source(srcset="./img/header-slider/s3-desktop.webp")
-							img.lazy(srcset="./img/header-slider/s3-desktop.webp", alt="img")
+							
+							img.lazy(src="./img/header-slider/s3-desktop.webp", alt="img")
 
 			.swiper-button-next
 				svg
