--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -43,38 +43,39 @@ header.header#top
 			
 			//====== mobile menu =========
 			#mobile-menu.mobile-menu
-				.mobile-menu__content
-					//======== mob menu content=====
-					.mobile-menu__list
-						ul
-							li
-								a(href="#!")  Производство<br> и&nbsp;печать
-							li
-								a(href="blog.html")  Полезные статьи
-							li
-								a(href="#!")  Как заказать
-							li
-								a(href="contacts.html")  Контакты
-					
-					//====== mob menu tel =====
-					.mobile-menu__contacts
-						a(href="tel:88007707419").contact-link 8 800 770 74 19
+				.scroll-y
+					.mobile-menu__content
+						//======== mob menu content=====
+						.mobile-menu__list
+							ul
+								li
+									a(href="#!")  Производство<br> и&nbsp;печать
+								li
+									a(href="blog.html")  Полезные статьи
+								li
+									a(href="#!")  Как заказать
+								li
+									a(href="contacts.html")  Контакты
 						
-						//===== кругляшок горит зеленым, если есть класс active  у родителя .online-state
-						.online-state.d-flex-y.active
-							span.online-state__dot
-							span.online-state__text Сейчас онлайн
-					
-					.social-block
-						a(href="#!").icon-email
-							img(src="./img/social/email.svg", alt="email")
-						a(href="#!").icon-vk
-							img(src="./img/social/vk.svg", alt="vk")
-						a(href="#!").icon-inst
-							img(src="./img/social/ins.svg", alt="inst")
-						a(href="#!").icon-tel
-							img(src="./img/social/app.svg", alt="app")
-						a(href="#!").icon-viber
-							img(src="./img/social/viber.svg", alt="viber")
-						a(href="#!").icon-tg
-							img(src="./img/social/tg.svg", alt="tg")
+						//====== mob menu tel =====
+						.mobile-menu__contacts
+							a(href="tel:88007707419").contact-link 8 800 770 74 19
+							
+							//===== кругляшок горит зеленым, если есть класс active  у родителя .online-state
+							.online-state.d-flex-y.active
+								span.online-state__dot
+								span.online-state__text Сейчас онлайн
+						
+						.social-block
+							a(href="#!").icon-email
+								img(src="./img/social/email.svg", alt="email")
+							a(href="#!").icon-vk
+								img(src="./img/social/vk.svg", alt="vk")
+							a(href="#!").icon-inst
+								img(src="./img/social/ins.svg", alt="inst")
+							a(href="#!").icon-tel
+								img(src="./img/social/app.svg", alt="app")
+							a(href="#!").icon-viber
+								img(src="./img/social/viber.svg", alt="viber")
+							a(href="#!").icon-tg
+								img(src="./img/social/tg.svg", alt="tg")
