--- a/src/scss/sections/_steps.scss
+++ b/src/scss/sections/_steps.scss
@@ -5,7 +5,7 @@
 	opacity:0;
 	&.active {
 		display: block;
-		animation-name: slowOpacity;
+		animation-name: opacity;
 		animation-duration: .3s;
 		animation-timing-function: linear;
 		animation-fill-mode: forwards;
