--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -303,6 +303,11 @@ select:-webkit-autofill:focus {
     display: none;
   }
 }
+@keyframes slowOpacity {
+  to {
+    opacity: 1;
+  }
+}
 .bottom-navigation{
   .swiper-pagination {
     bottom: 12px;
