--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -19,7 +19,7 @@ block content
 					.contacts-row
 						//======== title block ======
 						.contacts-block.accent-bg.d-flex-center
-							h2.h2.txt-center Остались<br>вопросы?
+							h2 Остались<br>вопросы?
 						
 						//====== opening hours + contacts =====
 						.contacts-block.contacts-block--connect
