--- a/src/pug/sections/_constructor-main-page.pug
+++ b/src/pug/sections/_constructor-main-page.pug
@@ -33,7 +33,7 @@ section.constructor.white-bg.mt-30
 			
 		//======= STEP 1 =====
 		.constructor-models.active(data-step-content)
-			p.title-20.mb-20 Выберите модель
+			h2 Выберите модель
 			.models-cards
 				+model-card(6, 1, 92, 'chkd')
 				+model-card(4, 2, 87)
@@ -49,7 +49,7 @@ section.constructor.white-bg.mt-30
 		.constructor-display(data-step-content)
 			//=======LEFT COLUMN ======
 			.constructor-column-left
-				h3.title-20.mb-20 Выберите цвета деталей<br> и сделайте заказ
+				h2 Выберите цвета деталей<br> и сделайте заказ
 			
 			
 			//======= CENTER COLUMN ======
