--- a/src/pug/sections/_header-banner-inner.pug
+++ b/src/pug/sections/_header-banner-inner.pug
@@ -2,13 +2,13 @@
 .header-banner.d-flex-column
 	//======== header title
 	.header-title
-		h1.h1 Шейкер + маркетплейс = 💜
+		h1 Шейкер + маркетплейс = 💜
 	
 	//======== SHAKER MODELS ========
 	.shaker-models-wrapper
 		.container
 			.shaker-models.d-flex
-				p.txt-bold Наши модели
+				h2 Наши модели
 				.shaker-models__type
 					//====== single item =======
 					.shaker-models__type-item
