--- a/src/pug/sections/_header-banner.pug
+++ b/src/pug/sections/_header-banner.pug
@@ -2,13 +2,13 @@
 .header-banner.d-flex-column
 	//======== header title
 	.header-title
-		h1.h1 Шейкер Боттл — Производитель  шейкеров в России оптом
+		h1 Шейкер Боттл — Производитель  шейкеров в России оптом
 	
 	//======== SHAKER MODELS ========
 	.shaker-models-wrapper
 		.container
 			.shaker-models.d-flex
-				p.txt-bold Наши модели
+				h2 Наши модели
 				.shaker-models__type
 					//====== single item =======
 					a(href="product-page.html").shaker-models__type-item
