--- a/src/pug/sections/_review.pug
+++ b/src/pug/sections/_review.pug
@@ -1,7 +1,7 @@
 //================= REVIEW ==============
 section.review
 	.section-title
-		h2.h2 Отзывы наших клиентов
+		h2 Отзывы наших клиентов
 	
 	.review-slider.swiper
 		.swiper-wrapper
