--- a/src/scss/pages/_contacts.scss
+++ b/src/scss/pages/_contacts.scss
@@ -2,6 +2,7 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 15px;
+	h2{text-align: center;}
 	@media (max-width: 767px) {
 	gap: 10px;
 	}
