--- a/src/pug/sections/_contacts-inner.pug
+++ b/src/pug/sections/_contacts-inner.pug
@@ -19,15 +19,15 @@ section.contacts#contacts
 						//=====social =======
 						.social-block
 							a(href="#!").icon-vk
-								img(src="./img/social/vk.svg", alt="vk")
+								img(src="./img/social/vk.webp", alt="vk")
 							a(href="#!").icon-inst
-								img(src="./img/social/ins.svg", alt="inst")
+								img(src="./img/social/ins.webp", alt="inst")
 							a(href="#!").icon-tel
-								img(src="./img/social/app.svg", alt="app")
+								img(src="./img/social/app.webp", alt="app")
 							a(href="#!").icon-viber
-								img(src="./img/social/viber.svg", alt="viber")
+								img(src="./img/social/viber.webp", alt="viber")
 							a(href="#!").icon-tg
-								img(src="./img/social/tg.svg", alt="tg")
+								img(src="./img/social/tg.webp", alt="tg")
 			
 
 				
@@ -45,15 +45,15 @@ section.contacts#contacts
 						//=====social =======
 						.social-block
 							a(href="#!").icon-vk
-								img(src="./img/social/vk.svg", alt="vk")
+								img(src="./img/social/vk.webp", alt="vk")
 							a(href="#!").icon-inst
-								img(src="./img/social/ins.svg", alt="inst")
+								img(src="./img/social/ins.webp", alt="inst")
 							a(href="#!").icon-tel
-								img(src="./img/social/app.svg", alt="app")
+								img(src="./img/social/app.webp", alt="app")
 							a(href="#!").icon-viber
-								img(src="./img/social/viber.svg", alt="viber")
+								img(src="./img/social/viber.webp", alt="viber")
 							a(href="#!").icon-tg
-								img(src="./img/social/tg.svg", alt="tg")
+								img(src="./img/social/tg.webp", alt="tg")
 
 			.contacts-form-wrapper
 				h2.title-25.mb-40 Оформим ваш заказ
