--- a/src/pug/sections/_contacts.pug
+++ b/src/pug/sections/_contacts.pug
@@ -17,15 +17,15 @@ section.contacts#contacts
 						//=====social =======
 						.social-block
 							a(href="#!").icon-vk
-								img(src="./img/social/vk.svg", alt="vk")
+								img(src="./img/social/vk.webp", alt="vk")
 							a(href="#!").icon-inst
-								img(src="./img/social/ins.svg", alt="inst")
+								img(src="./img/social/ins.webp", alt="inst")
 							a(href="#!").icon-tel
-								img(src="./img/social/app.svg", alt="app")
+								img(src="./img/social/app.webp", alt="app")
 							a(href="#!").icon-viber
-								img(src="./img/social/viber.svg", alt="viber")
+								img(src="./img/social/viber.webp", alt="viber")
 							a(href="#!").icon-tg
-								img(src="./img/social/tg.svg", alt="tg")
+								img(src="./img/social/tg.webp", alt="tg")
 			
 						//===== кругляшок горит зеленым, если есть класс active  у родителя .online-state
 						.online-state.d-flex-y.active
